--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-community/geolocation": "^3.0.5",
     "axios": "^1.3.4",
     "expo": "~48.0.4",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "pod-install": "^0.1.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
