--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~48.0.4",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "moment-timezone": "^0.5.41",
     "pod-install": "^0.1.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
