--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.71.3",
     "react-native-elements": "^3.4.3",
     "react-native-geolocation": "^1.0.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
